--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -5,3 +5,13 @@
   overflow: auto;
   border: 2px solid red;
 }
+
+.workout-info-small {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.delete-workout {
+  height: 70%;
+}
