--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,6 +1,6 @@
 .form-container {
-  height: 30vh;
-  width: 25vw;
+  height: 60%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +10,10 @@
 
 input {
   width: 60%;
+}
+
+.description-input {
+  height: 20%;
 }
 
 .post-button {
