--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -1,7 +1,7 @@
 
 .scrollWorkout-container {
-  height: 20vh;
-  width: 20vw;
+  height: 20%;
+  width: 25%;
   overflow: auto;
   border: 2px solid red;
 }
