--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -6,12 +6,33 @@
   border: 2px solid red;
 }
 
-.workout-info-small {
+.single-scroll-workout {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
+.workout-info-small {
+  display: flex;
+  /* justify-content: space-around; */
+  /* align-items: center; */
+}
+
 .delete-workout {
   height: 70%;
 }
+
+.workout-link {
+  text-decoration: none;
+  color: black;
+}
+
+.workout-link:hover {
+  color: blue;
+}
+
+.date-tag {
+  margin-left: 10%;
+}
+
+
