--- a/src/components/singleWorkout/singleWorkout.css
+++ b/src/components/singleWorkout/singleWorkout.css
@@ -1,4 +1,3 @@
-
 .singleWorkout-container {
   height: 100vh;
   width: 100%;
@@ -17,20 +16,43 @@
   height: 85vh;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: space-around;
   border: 2px solid red;
 }
 
-.description-container {
+.description-container,
+.extra-container {
+  height: 50%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.description-text-container {
   border: 2px solid green;
+  max-height: 70%;
+  max-width: 100%;
+  overflow-y: auto;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+}
+
+.extra-text-container {
+  border: 2px solid;
   max-height: 30%;
   overflow-y: auto;
-  width: 30%;
+  width: 70%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
+
+
 
 .description-text {
   margin: 0;
