--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -13,6 +13,8 @@
   width: 70%;
   display: flex;
   justify-content: space-around;
+  text-decoration: none;
+  color: black;
 }
 
 .title-tag-container {
@@ -39,6 +41,13 @@
 .delete-workout {
   height: 50%;
 }
+
+.title-tag:hover,
+.date-tag:hover {
+  color: blue;
+}
+
+
 
 
 
