--- a/src/components/singleWorkout/singleWorkout.css
+++ b/src/components/singleWorkout/singleWorkout.css
@@ -4,12 +4,25 @@
 }
 
 .title-date {
-  height: 15vh;
+  height: 20vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid blue;
+}
+
+.view-home-button {
+  height: 5%;
+  width: 100%;
+}
+
+.single-workout-header-content {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description-extra {
