--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -5,8 +5,9 @@
 }
 
 .single-scroll-workout {
-  border: 2px solid red;
+  border: 1px solid #000000;
   display: flex;
+  background-color: #232f3e;
 }
 
 .workout-link {
@@ -42,10 +43,15 @@
   height: 50%;
 }
 
-.title-tag:hover,
-.date-tag:hover {
-  color: blue;
+.title-tag,
+.date-tag {
+  color: #f2f2f2;
 }
+
+.single-scroll-workout:hover {
+  border: 2px solid #f2f2f2;
+}
+
 
 
 
