--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   height: 10vh;
-  background-color: #232f3e;
+  background-color: #146eb4;
   border: 1px solid #000000;
 }
 
