--- a/src/components/singleWorkout/singleWorkout.css
+++ b/src/components/singleWorkout/singleWorkout.css
@@ -1,6 +1,14 @@
 .singleWorkout-container {
   height: 100vh;
   width: 100%;
+  background-image: url('../../assets/1fd4398cb4eb02502234efa6667c28cf.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+h4 {
+  background-color: #f2f2f2;
 }
 
 .title-date {
@@ -9,7 +17,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid blue;
+  border: 1px solid #000000;
+  background-color: #146eb4;
 }
 
 .view-home-button {
@@ -32,7 +41,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  border: 2px solid red;
 }
 
 .description-container,
@@ -45,7 +53,8 @@
 }
 
 .description-text-container {
-  border: 2px solid green;
+  background-color: #f2f2f2;
+  border: 1px solid #000000;
   max-height: 70%;
   max-width: 100%;
   overflow-y: auto;
@@ -56,7 +65,8 @@
 }
 
 .extra-text-container {
-  border: 2px solid;
+  background-color: #f2f2f2;
+  border: 1px solid #000000;
   max-height: 30%;
   overflow-y: auto;
   width: 70%;
