--- a/src/components/Hamburger/Hamburger.css
+++ b/src/components/Hamburger/Hamburger.css
@@ -1,5 +1,3 @@
-/* HamburgerMenu.css */
-
 .hamburger-menu {
   position: relative;
 }
@@ -9,14 +7,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 30px;
-  height: 20px;
+  width: 5vw;
+  height: 60%;
   padding: 5px;
 }
 
 .bar {
   width: 100%;
-  height: 3px;
+  height: 10%;
   background-color: #333;
   transition: transform 0.3s, opacity 0.3s;
 }
@@ -39,20 +37,23 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 40px; /* Adjust the positioning as needed */
+  top: 40px;
   right: 0;
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #000000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1;
+  margin-right: 20%;
+  margin-top: 50%;
 }
 
-.dropdown-content a {
-  padding: 10px;
+.drop-down-option {
+  height: 50%;
+  border: 1px solid #000000;
   text-decoration: none;
-  color: #333;
+  color: #000000;
 }
 
-.dropdown-content a:hover {
-  background-color: #f0f0f0;
+.drop-down-option:hover {
+  background-color: #ff9900;
 }
