--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 
 .header-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   height: 10vh;
   background-color: #146eb4;
   border: 1px solid #000000;
