--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,11 +2,14 @@
 .header-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 10vh;
   background-color: #146eb4;
   border: 1px solid #000000;
+  padding: 0 20px;
 }
 
 h1 {
   color: #f2f2f2;
+  margin: 0;
 }
