--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-image: url('../../assets/); */
 }
 
 .login-input-container {
