--- a/src/components/singleWorkout/singleWorkout.css
+++ b/src/components/singleWorkout/singleWorkout.css
@@ -1,7 +1,7 @@
 .singleWorkout-container {
   height: 100vh;
   width: 100%;
-  background-image: url('../../assets/1fd4398cb4eb02502234efa6667c28cf.jpg');
+  /* background-image: url('../../assets/1fd4398cb4eb02502234efa6667c28cf.jpg'); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
