--- a/src/components/scrollWorkouts/scrollWorkouts.css
+++ b/src/components/scrollWorkouts/scrollWorkouts.css
@@ -51,6 +51,12 @@
   border: 2px solid #f2f2f2;
 }
 
+.weekly-title {
+  width: 60%;
+  background-color: #f2f2f2;
+  border: 2px solid #000000;
+}
+
 
 
 
