Add login page sign up tag

--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -44,3 +44,14 @@
   height: 8%;
   width: 30%;
 }
+
+.sign-up-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.sign-up-title:hover {
+ border-bottom: 2px solid blue;
+ cursor: pointer;
+}
