--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -45,6 +45,11 @@
   width: 30%;
 }
 
+.sign-up-link {
+  color: black;
+  text-decoration: none;
+}
+
 .sign-up-container {
   width: 100%;
   display: flex;
