--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -5,20 +5,21 @@
 }
 
 .settings-nav-bar {
-  border: 2px solid red;
+  border: 2px solid #000000;
   height: 100%;
   width: 20%;
 }
 
 .delete-account-main {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   width: 80%;
   display: flex;
   flex-direction: column;
 }
 
 .account-deletion-header {
-  border: 2px solid green;
+  border: 1px solid #000000;
+  background-color: #3466AA;
   height: 10%;
   width: 100%;
   display: flex;
@@ -31,7 +32,7 @@
 }
 
 .account-deletion-form-container {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   height: 100%;
   width: 100%;
   display: flex;
@@ -40,7 +41,8 @@
 }
 
 .account-deletion-form {
-  border: 2px solid purple;
+  border: 1px solid #000000;
+  background-color: #82b7dc;
   height: 30%;
   width: 40%;
   display: flex;
