Add snowboarding background image to settings

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -33,6 +33,7 @@
 
 .account-deletion-form-container {
   /* border: 2px solid blue; */
+  background-image: url('../../assets/snowboard-aw18qz2lcmhdw25k.jpg');
   height: 100%;
   width: 100%;
   display: flex;
